# Asciigine

./: .gitignore  Asciigine.csproj  Asciigine.sln  CMakeLists.txt  Makefile  Program.cs  README.md  perf.data  perf.data.old
Projects/PacGunMan/: Enemy.cs  Main.cs  Player.cs  To Do.txt
Projects/PacGunMan/maps/: TestMap.map
src/: Engine.cs  Project.cs  heart.c  heart.h  init.c  init.h  main.c
src/Core/: 2DVector.cs  Buffer.cs  DialogBox.cs  Exception.cs  Layers.cs  Render.cs  ReqAdminAccess.cs  Utils.cs  Window.cs  input.cs
src/Core/Assets/: DialogBox.cs
src/Utils/: MapLoader.cs  yes.txt
src/Utils/MapLang/Interpreter/: Test.mapl
src/Utils/MapLang/Interpreter/Lexer/: Lexer.cs  Token.cs
src/collision/: maanger.c  manager.c  manager.h
src/core/: CMakeLists.txt  tick.c  tick.h
src/input/: CMakeLists.txt  input.c  input.h  keyboard.c  keyboard.h  manager.c  manager.h
src/maps/: test
src/renderer/: CMakeLists.txt  gmon.out  layer.c  layer.h  layerManager.c  layerManager.h  render.c  render.h
src/renderer/layer/: layer.c  layer.h  manager.c  manager.h
src/utils/: CMakeLists.txt  args.c  args.h  fastprint.c  fastprint.h  file.c  file.h  log.c  log.h  terminal.c  terminal.h  util.h
